--- a/Integrated Presenter/MainWindow.xaml
+++ b/Integrated Presenter/MainWindow.xaml
@@ -33,7 +33,7 @@
                 </MenuItem>
                 <MenuItem Header="View" IsTabStop="False">
                     <MenuItem Name="cbPrevAfter" Header="Prev/After [O]" IsTabStop="False" IsCheckable="True" IsChecked="True" Click="ClickViewPrevAfter"></MenuItem>
-                    <MenuItem Header="Preview Effective Current" IsTabStop="False" IsCheckable="True" IsChecked="True" Click="ClickToggleShowEffectiveCurrentPreview"></MenuItem>
+                    <MenuItem Name="cbShowEffectiveCurrent" Header="Preview Effective Current" IsTabStop="False" IsCheckable="True" IsChecked="True" Click="ClickToggleShowEffectiveCurrentPreview"></MenuItem>
                     <MenuItem Name="cbShowCurrentVideoCountdownTimer" Header="Video Countdown Timer (Current)" IsTabStop="False" IsCheckable="True" IsChecked="True" Click="ClickToggleShowCurrentVideoCountdownTimer"></MenuItem>
                     <MenuItem Name="cbAdvancedPresentation" Header="Advanced Presentation [Q]" IsTabStop="False" IsCheckable="True" IsChecked="False" Click="ClickViewAdvancedPresentation"></MenuItem>
                     <MenuItem Header="Audio Player [A]" IsTabStop="False" Click="ClickViewAudioPlayer"></MenuItem>
@@ -342,6 +342,12 @@
                                                     <TextBlock HorizontalAlignment="Center" Style="{StaticResource GrayText}">TIME</TextBlock>
                                                     <Viewbox>
                                                         <TextBlock Name="TbTime" Foreground="Orange">00:00:00</TextBlock>
+                                                    </Viewbox>
+                                                    <Viewbox Width="140" Height="20" Margin="0,-10,0,0">
+                                                        <StackPanel Orientation="Horizontal">
+                                                            <TextBlock Style="{StaticResource GrayText}">Switcher:</TextBlock>
+                                                            <TextBlock Name="tb_switcherConnection" Margin="5,0,0,0" Foreground="Red">Disconnected</TextBlock>
+                                                        </StackPanel>
                                                     </Viewbox>
                                                 </StackPanel>
                                             </Border>
