--- a/Integrated Presenter/MainWindow.xaml
+++ b/Integrated Presenter/MainWindow.xaml
@@ -912,7 +912,7 @@
 
 
                                                     <StackPanel>
-                                                        <Button Name="BtnDVE" Click="ClickDVEMode" Foreground="White">
+                                                        <Button Name="BtnDVE" Click="ClickDVEMode" Foreground="White" Background="Red" Cursor="Hand">
                                                             <Button.Content>DVE (PIP)</Button.Content>
                                                             <Button.Template>
                                                                 <ControlTemplate>
@@ -921,15 +921,15 @@
                                                                     </Border>
                                                                     <ControlTemplate.Triggers>
                                                                         <Trigger Property="IsMouseOver" Value="True">
-                                                                            <Setter Property="Cursor" Value="Hand"></Setter>
-                                                                            <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
+                                                                            <Setter Property="Cursor" Value="{Binding Path=Cursor, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" TargetName="Border"></Setter>
+                                                                            <Setter Property="BorderBrush" Value="{Binding Path=Background, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" TargetName="Border"></Setter>
                                                                         </Trigger>
                                                                     </ControlTemplate.Triggers>
                                                                 </ControlTemplate>
                                                             </Button.Template>
                                                         </Button>
 
-                                                        <Button Name="BtnChroma" Click="ClickChromaMode" Foreground="White">
+                                                        <Button Name="BtnChroma" Click="ClickChromaMode" Foreground="White" Background="red" Cursor="Hand">
                                                             <Button.Content>CHROMA</Button.Content>
                                                             <Button.Template>
                                                                 <ControlTemplate>
@@ -938,8 +938,8 @@
                                                                     </Border>
                                                                     <ControlTemplate.Triggers>
                                                                         <Trigger Property="IsMouseOver" Value="True">
-                                                                            <Setter Property="Cursor" Value="Hand"></Setter>
-                                                                            <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
+                                                                            <Setter Property="Cursor" Value="{Binding Path=Cursor, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" TargetName="Border"></Setter>
+                                                                            <Setter Property="BorderBrush" Value="{Binding Path=Background, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" TargetName="Border"></Setter>
                                                                         </Trigger>
                                                                     </ControlTemplate.Triggers>
                                                                 </ControlTemplate>
