fix? introit parsing. start work on new import wizard GUI

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -30,6 +30,7 @@
             </MenuItem>
             <MenuItem Header="Import">
                 <MenuItem Name="miimport" Click="ClickImportService" Header="Import from LSB Service"></MenuItem>
+                <MenuItem Name="miimport_adv" Click="ClickImportServiceAdv" Header="Import Wizard"></MenuItem>
             </MenuItem>
             <MenuItem Header="Recovery">
                 <MenuItem Click="RecoverAutoSave" Header="Recover Auto Save"></MenuItem> 
