--- a/Integrated Presenter/Connection.xaml
+++ b/Integrated Presenter/Connection.xaml
@@ -5,16 +5,44 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Integrated_Presenter"
         mc:Ignorable="d"
-        Title="Connect" Height="120" Width="380">
+        Title="Connect" Height="120" Width="380" Background="#3f3f3f">
     <Grid>
         <StackPanel VerticalAlignment="Center">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Name="lbIP" Margin="10,10,10,10">IP Address:</TextBlock>
-                <TextBox Name="tbIP" Width="200" Margin="10,10,10,10"></TextBox>
+                <TextBlock Name="lbIP" Margin="10,10,10,10" Foreground="#eaeaea">IP Address:</TextBlock>
+                <TextBox Name="tbIP" Width="200" Margin="10,10,10,10" Style="{StaticResource darkTextbox}"></TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Click="Cancel" Margin="10,10,10,10" Width="100" Height="30">Cancel</Button>
-                <Button Click="Connect" Margin="10,10,10,10" Width="100" Height="30">Connect</Button>
+                <Button Click="Cancel" Margin="10,10,10,10" Width="100" Height="30">
+                    <Button.Template>
+                        <ControlTemplate>
+                            <Border Name="Border" Background="#1d1d1d" BorderBrush="Orange" Margin="3" BorderThickness="1">
+                                <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Orange">CANCEL</ContentControl>
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Cursor" Value="Hand"></Setter>
+                                    <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <Button Click="Connect" Margin="10,10,10,10" Width="100" Height="30">
+                    <Button.Template>
+                        <ControlTemplate>
+                            <Border Name="Border" Background="#1d1d1d" BorderBrush="Orange" Margin="3" BorderThickness="1">
+                                <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Orange">CONNECT</ContentControl>
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Cursor" Value="Hand"></Setter>
+                                    <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
             </StackPanel>
         </StackPanel>
     </Grid>
