--- a/SlideCreater/ElementPreview.xaml
+++ b/SlideCreater/ElementPreview.xaml
@@ -3,23 +3,39 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SlideCreater" xmlns:uicontrols="clr-namespace:UIControls;assembly=UIControls"
+             xmlns:local="clr-namespace:SlideCreater" xmlns:uicontrols="clr-namespace:UIControls;assembly=UIControls" xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="1000">
-    <Grid>
+             d:DesignHeight="500" d:DesignWidth="1500">
+    <Grid MaxHeight="500">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="500"></ColumnDefinition>
                 <ColumnDefinition Width="500"></ColumnDefinition>
+                <ColumnDefinition Width="500"></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <WebBrowser Name="webview" Grid.Column="0"></WebBrowser>
-            <Viewbox Grid.Column="2" Width="500">
-                <StackPanel Width="500">
-                    <uicontrols:BetterTextBox Name="textbox" MaxHeight="400" MaxWidth="500"></uicontrols:BetterTextBox>
-                    <TextBlock HorizontalAlignment="Center" TextAlignment="Center" Name="tbtype"></TextBlock>
-                </StackPanel>
-            </Viewbox>
-            <!--<ListView Name="slidelist" Grid.Column="2"></ListView>-->
+            <Grid Grid.Column="0">
+                <Viewbox Stretch="UniformToFill" MaxHeight="400" MaxWidth="400">
+                    <wpf:ChromiumWebBrowser Name="webview" Width="1000" Height="2000"></wpf:ChromiumWebBrowser>
+                </Viewbox>
+            </Grid>
+            <Grid Grid.Column="1" MaxHeight="500">
+                <Grid.RowDefinitions>
+                    <RowDefinition></RowDefinition>
+                    <RowDefinition Height="20"></RowDefinition>
+                </Grid.RowDefinitions>
+                <uicontrols:BetterTextBox Name="textbox" Grid.Row="0"></uicontrols:BetterTextBox>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock HorizontalAlignment="Center" TextAlignment="Center" Name="tbtype" Grid.Column="0"></TextBlock>
+                    <Button Grid.Column="1" Click="ClickReRender">Re-Render</Button>
+                </Grid>
+            </Grid>
+            <Grid Grid.Column="2">
+                <ListView Name="slidelist" Grid.Column="2" MaxHeight="500"></ListView>
+            </Grid>
         </Grid>
     </Grid>
 </UserControl>
