Asset renaming. Improved trusty load times. Improved trusty save/auto save. Broken: Autosaves won't load assets referenced by an opened trusty save. (But save actually works now.... so presumably this is fine?)

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -30,6 +30,8 @@
             <MenuItem Header="View">
                 <MenuItem Name="mipreviewslide" Click="ClickTogglePreviewSlide" Header="Preview Slides" IsChecked="true" IsCheckable="true"></MenuItem>
                 <MenuItem Name="mipreviewkey" Click="ClickTogglePreviewKey" Header="Preview Keys" IsCheckable="true"></MenuItem>
+                <Separator></Separator>
+                <MenuItem Name="openTmpFolder" Click="OpenTempFolder" Header="View Temp Folder"></MenuItem>
             </MenuItem>
             <MenuItem Header="Import">
                 <MenuItem Name="miimport" Click="ClickImportService" Header="Import from LSB Service"></MenuItem>
